Refiz o site do youtube

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>youtube</title>
 </head>
 <body>
     <header>
         <a href="#"><img src="youtube-clone/logo.png" alt="youtubelogo" class="ytlogo"></a>
+
 
         <form action="" class="source">
             <input type="search" class="search-input" placeholder="Search" aria-label="Search">
